- Map defaults to Santa Cruz and added map functionality such as pan, tilt, and My Location button

--- a/UCSCBusBuddy/res/values/strings.xml
+++ b/UCSCBusBuddy/res/values/strings.xml
@@ -13,5 +13,6 @@
     <string name="title_activity_nineteen">NineteenActivity</string>
     <string name="title_activity_twenty">TwentyActivity</string>
     <string name="title_activity_nc">NCActivity</string>
+    <string name="title_activity_show_bus_stop">ShowBusStop</string>
 
 </resources>
