- Added clickable example marker to map overlay in Select A Stop Activity - Added activity with bus stop times that is accessed through markers

--- a/UCSCBusBuddy/res/values/strings.xml
+++ b/UCSCBusBuddy/res/values/strings.xml
@@ -14,5 +14,7 @@
     <string name="title_activity_twenty">TwentyActivity</string>
     <string name="title_activity_nc">NCActivity</string>
     <string name="title_activity_show_bus_stop">ShowBusStop</string>
+    <string name="title_activity_selected_stop">SelectedStop</string>
+    <string name="title_activity_stop_info">StopInfoActivity</string>
 
 </resources>
